Network-egres/OLD-YAML-CODE/3.alpha-deny-all.yml
for ns in alpha bravo charlie; do kubectl delete netpol --all -n $ns; done
#Blocking Traffic Between The Util Pods
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: alpha-deny-all
  namespace: alpha
spec:
  podSelector:
    matchLabels:
      ns: alpha
  ingress: []

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: bravo-deny-all
  namespace: bravo
spec:
  podSelector:
    matchLabels:
      ns: bravo
  ingress: []

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: charlie-deny-all
  namespace: charlie
spec:
  podSelector:
    matchLabels:
      ns: charlie
  ingress: []

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mysqldb-deny-all
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress: []
